--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,15 @@
     },
     "[javascript]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
-    }
+    },
+    "eslint.options": {
+
+    },
+    "eslint.trace.server": "off",
+    "eslint.workingDirectories": [
+
+    ],
+    "eslint.validate": [
+        
+    ]
 }
